--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -9,6 +9,8 @@
 \usepackage{graphicx}
 \usepackage[colorlinks=true,citecolor=magenta,linkcolor=blue]{hyperref}
 
+\usepackage[ruled,vlined]{algorithm2e}
+
 \begin{document}
 
 \begin{center}
