Use camelCase for function names

--- a/tex/sections/nipopows_velvet_fork/protocol_update.tex
+++ b/tex/sections/nipopows_velvet_fork/protocol_update.tex
@@ -72,7 +72,7 @@ Algorithm \ref{alg:updateInterlink} describes the interlink update procedure aft
 \SetAlgoNoLine
 \DontPrintSemicolon
 \SetKwProg{Fn}{function}{:}{\text{end function}}
-\Fn{updateInterlink-velvet(C)}{
+\Fn{updateInterlinkVelvet(C)}{
  $k \leftarrow -1$\;
  $B\leftarrow C[-k]$\;
  \While{!has-correct-interlink(B)}{
