Add more sections to be completed

--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -179,6 +179,11 @@ blocks of \textit{C} the ratio of honest blocks is at least $\mu_Q$.\\
 parameters $\tau \in \mathbb{R}$ and $s \in \mathbb{N}$ states that for any honest party
 \textit{P} with chain \textit{C}, it holds that for any $s$ rounds there are at least $\tau \cdot s$ blocks added to the chain of \textit{P}.
 
+\subsection{NIPoPoWs Preliminaries}
+
+\subsection{Hard, Soft and Velvet Forks}
+The goal of this work is to provide a slightly modified NIPoPoWs protocol so that it can be
+securely deployed under a velvet fork.
 \section{NIPoPoWs under Soft or Hard Fork}
 \import{sections/nipopows_hard_fork/}{nipopows_hard_fork.tex}
 
