--- a/tex/sections/nipopows_velvet_fork/suffix_security.tex
+++ b/tex/sections/nipopows_velvet_fork/suffix_security.tex
@@ -25,10 +25,13 @@ From Theorem 3 we have:
 
 Thus we have:
 \begin{center}
-$  \dfrac{t}{n-t} \leq \dfrac{1-\delta}{2} $
+\begin{equation}
+\dfrac{t}{n-t} \leq \dfrac{1-\delta}{2}
+\end{equation}
 \end{center}
 
-\textbf{Theorem 4. (Security under velvet fork)} \textit{Assuming honest majority
+
+\textbf{Theorem 4. (Suffix Proofs Security under velvet fork)} \textit{Assuming honest majority
 under velvet fork conditions such that $\dfrac{t}{n-t} \leq \dfrac{1-\delta}{2}$,
 the non-interactive proofs-of-proof-of-work construction for computable
 $\kappa$-stable monotonic suffix-sensitive predicates under velvet fork conditions
