Typos, alignment and style fixes

--- a/tex/sections/nipopows_velvet_fork/protocol_update.tex
+++ b/tex/sections/nipopows_velvet_fork/protocol_update.tex
@@ -189,7 +189,7 @@ The protocol patch we suggest can be summarized as follows:\\
 to make NIPoPoWs safe under velvet fork conditions we suggest:
 \begin{enumerate}
 \item Strengthen the Honest Majority Assumption so that $\dfrac{t}{n-t} \leq
-\dfrac{1-\delta}{2} \cdot (n-t)$
+\dfrac{1-\delta}{2}$
 %%% TODO: also provide short algorithm for the intrlink construction after the patch 
 \item The NIPoPoW protocol under velvet fork works as usual but a miner constructs
 a block's interlink without pointers to blocks with false interlink except for
