--- a/tex/sections/nipopows_velvet_fork/protocol_update.tex
+++ b/tex/sections/nipopows_velvet_fork/protocol_update.tex
@@ -21,7 +21,7 @@ any possible construction, in this section we will try to argue for it.
 
 \textbf{Claim:} \textit{Assume $t$ adversarial out of total $n$ parties. There is
 no construction for NIPoPoWs suffix proofs under velvet fork conditions, which is
-secure for every adversary, such that $\dfrac{t}{n-t} < \delta$.}
+secure for every adversary, such that $\dfrac{t}{n-t} < 1 - \delta$.}
 
 \textit{Discussion.} As explained earlier, since the adversary may use the interlink
 structure so as to include pointers to arbitrary blocks,  she may construct her own
