Some additions in preamble

--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -13,6 +13,13 @@
 
 \usepackage[linesnumbered,ruled]{algorithm2e}
 
+\usepackage{amsthm}
+
+\theoremstyle{plain}
+\newtheorem{thm}{Theorem}[] 
+\theoremstyle{definition}
+\newtheorem{defn}[thm]{Definition} 
+
 \begin{document}
 
 \begin{center}
